--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -469,7 +469,7 @@
                         <td class="red">cup10501.html 화면으로 대체</td>
                     </tr>
 					<tr>
-                        <td>가입정보관리</td>
+                        <td>가입정보 관리</td>
                         <td></td>
                         <td><a target="_blank" href="subscription_a/cup10505.html">cup10505.html</a></td>
                         <td class="red">
@@ -496,7 +496,7 @@
 
 					<tr class="line">
                         <th>빌링</th>
-                        <td>과금정책목록</td>
+                        <td>과금정책 목록</td>
                         <td></td>
                         <td><a target="_blank" href="billing_a/cup10601.html">cup10601.html</a></td>
                         <td class="red">
@@ -517,7 +517,7 @@
 						</td>
                     </tr>
 					<tr>
-                        <td>정기과금목록</td>
+                        <td>정기과금 목록</td>
                         <td></td>
                         <td><a target="_blank" href="billing_a/cup10603.html">cup10603.html</a></td>
 						<td>
@@ -562,7 +562,7 @@
 						</td>
                     </tr>
 					<tr>
-                        <td>과금정보관리</td>
+                        <td>과금정보 관리</td>
                         <td></td>
                         <td><a target="_blank" href="billing_a/cup10608.html">cup10608.html</a></td>
                         <td class="red">
@@ -643,7 +643,7 @@
 
 					<tr class="line">
                         <th>서비스</th>
-                        <td>서비스목록</td>
+                        <td>서비스 목록</td>
                         <td></td>
                         <td><a target="_blank" href="service_a/cup10701.html">cup10701.html</a></td>
                         <td class="red">
@@ -655,7 +655,7 @@
 						</td>
                     </tr>
 					<tr>
-                        <td>서비스관리</td>
+                        <td>서비스 관리</td>
                         <td></td>
                         <td><a target="_blank" href="service_a/cup10702.html">cup10702.html</a></td>
                         <td class="red">
@@ -671,7 +671,7 @@
 						</td>
                     </tr>
 					<tr>
-                        <td>가격목록</td>
+                        <td>가격 목록</td>
                         <td></td>
                         <td><a target="_blank" href="service_a/cup10703.html">cup10703.html</a></td>
                         <td class="red">
@@ -683,7 +683,7 @@
 						</td>
                     </tr>
 					<tr>
-                        <td>가격관리</td>
+                        <td>가격 관리</td>
                         <td></td>
                         <td><a target="_blank" href="service_a/cup10704.html">cup10704.html</a></td>
                         <td class="red">
@@ -700,15 +700,21 @@
                         <td class="red">삭제 페이지</td>
                     </tr>
 					<tr>
-                        <td>서비스그룹</td>
+                        <td>서비스그룹 목록</td>
                         <td></td>
-                        <td><a target="_blank" href="#"></a></td>
+                        <td><a target="_blank" href="service_a/cup10705.html">cup10705.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>서비스그룹 관리</td>
+                        <td></td>
+                        <td><a target="_blank" href="service_a/cup10707.html">cup10707.html</a></td>
                         <td class="red"></td>
                     </tr>
 
 					<tr class="line">
                         <th>사이트</th>
-                        <td>Notice목록</td>
+                        <td>Notice 목록</td>
                         <td></td>
                         <td><a target="_blank" href="site_a/cup10801.html">cup10801.html</a></td>
                         <td class="red">
@@ -718,7 +724,7 @@
 						</td>
                     </tr>
 					<tr>
-                        <td>Notice관리</td>
+                        <td>Notice 관리</td>
                         <td></td>
                         <td><a target="_blank" href="site_a/cup10802.html">cup10802.html</a></td>
                         <td class="red"></td>
@@ -732,7 +738,7 @@
 
 					<tr class="line">
                         <th>관리자</th>
-                        <td>시스템코드목록</td>
+                        <td>시스템코드 목록</td>
                         <td></td>
                         <td><a target="_blank" href="admin_a/cup11001.html">cup11001.html</a></td>
                         <td class="red">
@@ -741,7 +747,7 @@
 						</td>
                     </tr>
 					<tr>
-                        <td>시스템코드관리</td>
+                        <td>시스템코드 관리</td>
                         <td></td>
 						<td><a target="_blank" href="admin_a/cup11002.html">cup11002.html</a></td>
                         <td class="red">
