--- a/main/index.html
+++ b/main/index.html
@@ -160,9 +160,8 @@
 					</div>
 					<div class="layer">
 
-						layer
 						<div style="height:100px; background:blue">
-
+							layer
 						</div>
 
 						<div class="a">
@@ -433,6 +432,15 @@
 							</div>
 						</div>
 
+
+						<div class="a">
+							<div class="inputBox onlyNumber">
+								<input type="text" name="" class="inp onlyNumber" id="">
+								<button type="button" class="inpReset"></button>
+							</div>
+
+						</div>
+
 					</div>
 				</div>
 			</div>
@@ -445,6 +453,12 @@
 
 			.a+.a {}
 		</style>
+
+		<script type="text/javascript">
+			$(function() {
+				//dd
+			});
+		</script>
 
 	</div>
 </body>
