--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -411,13 +411,13 @@
 					<tr>
                         <td>Company 목록</td>
                         <td></td>
-                        <td><a target="_blank" href="Organization_a/cup10205.html"></a></td>
+                        <td><a target="_blank" href="Organization_a/cup10205.html">cup10205.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
                         <td>Company 관리</td>
                         <td></td>
-                        <td><a target="_blank" href="Organization_a/cup10206.html"></a></td>
+                        <td><a target="_blank" href="Organization_a/cup10206.html">cup10206.html</a></td>
                         <td class="red"></td>
                     </tr>
 					<tr>
