--- a/htmlList.html
+++ b/htmlList.html
@@ -111,6 +111,11 @@
                         <td><a target="_blank" href="./pub/templateC.html">templateC.html</a></td>
                         <td>레이어 가이드</td>
                     </tr>
+					<tr>
+                        <td><a target="_blank" href="./pub/templateD.html">templateD.html</a></td>
+                        <td>etc 가이드</td>
+                    </tr>
+
 					<tr class="line">
 						<th>외부 참조 url</th>
                         <td colspan="4">
