--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -111,6 +111,11 @@
                         <td><a target="_blank" href="./pub/templateC.html">templateC.html</a></td>
                         <td>레이어 가이드</td>
                     </tr>
+					<tr>
+                        <td><a target="_blank" href="./pub/templateD.html">templateD.html</a></td>
+                        <td>etc 가이드</td>
+                    </tr>
+
 					<tr class="line">
 						<th>외부 참조 url</th>
                         <td colspan="4">
@@ -591,7 +596,8 @@
 						<td>
 							사용자 페이지와 같이 사용
 							<div class="red">
-								2019-02-25 수정
+								2019-02-25 수정 <br />
+								2019-03-07 수정
 							</div>
 						</td>
                     </tr>
@@ -613,7 +619,8 @@
                         <td><a target="_blank" href="billing_a/cup10614.html">cup10614.html</a></td>
                         <td class="red">
 							2019-02-25 수정 <br />
-							2019-02-27 수정
+							2019-02-27 수정 <br />
+							2019-03-07 수정
 						</td>
                     </tr>
 					<tr>
