--- a/pub/templateB.html
+++ b/pub/templateB.html
@@ -515,6 +515,27 @@ value="" 값과 option text를 비교하여 검색하는 기능 두가지가 동
 	</textarea>
 	<!-- //souce code 뷰어 -->
 
+	<h2>Combobox - Warning</h2>
+	<div class="comboBox Warning">
+		<select class="comboSelect" id="" placeholder="Select a Type">
+			<option value="">Select a Type</option>
+			<option value="T-Shirt">T-Shirt</option>
+			<option value="T-Shirt Woman">T-Shirt Woman</option>
+			<option value="Yellow T-Shirt">Yellow T-Shirt</option>
+			<option value="Zebra T-Shoot">Zebra T-Shoot</option>
+		</select>
+	</div>
+	<!-- souce code 뷰어 -->
+	<textarea name="" id="" cols="30" rows="10" class="pubTextarea">
+<div class="comboBox Warning">
+	<select class="comboSelect" id="" placeholder="Select a Type">
+		<option value="">Select a Type</option>
+		<option value=""></option>
+	</select>
+</div>
+	</textarea>
+	<!-- //souce code 뷰어 -->
+
 	<h2>Item Select</h2>
 	<select name="" multiple class="ui fluid dropdown" id="">
 		<option value="">Select TAX Item(s)</option>
