--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -344,7 +344,8 @@
                         <td class="red">
 							2019-02-20 수정 <br />
 							2019-02-21 수정 <br />
-							2019-02-28 수정
+							2019-02-28 수정 <br />
+							2019-03-13 수정
 						</td>
                     </tr>
 					<tr>
@@ -465,7 +466,8 @@
                         <td class="red">
 							2019-02-20 수정 <br />
 							2019-02-21 수정 <br />
-							2019-02-25 수정
+							2019-02-25 수정 <br />
+							2019-03-13 수정
 						</td>
                     </tr>
 					<tr>
@@ -710,7 +712,9 @@
 							2019-02-20 수정 <br />
 							2019-02-21 수정 <br />
 							2019-02-25 수정 <br />
-							2019-02-26 수정
+							2019-02-26 수정 <br />
+							2019-03-12 수정 <br />
+							2019-03-13 수정
 						</td>
                     </tr>
 					<tr>
@@ -782,7 +786,9 @@
                         <td>권한 목록</td>
                         <td></td>
                         <td><a target="_blank" href="admin_a/cup11003.html">cup11003.html</a></td>
-                        <td class="red"></td>
+                        <td class="red">
+							2019-03-13 수정
+						</td>
                     </tr>
 					<tr>
                         <td>권한 관리</td>
