--- a/service_a/cup10704.html
+++ b/service_a/cup10704.html
@@ -35,7 +35,7 @@
 	<div class="wrapper">
 		<!-- 헤더영역 -->
 		<header id="headerWrap">
-			<h1><img src="../static/images/common/logo.jpg" alt="OPUS Logistics" /></h1>
+			<h1><img src="../static/images/common/logo.png" alt="OPUS Logistics" /></h1>
 			<div class="menuAll">
 				<button type="button" class="allBtn">
 					<span>Menu</span>
@@ -186,7 +186,9 @@
 							<ul class="itemList2">
 								<li>
 									<dl class="inpItem">
-										<dt id="cup10704_serviceNameLb">Service Name</dt>
+										<!-- 2019-03-13 수정 -->
+										<dt id="cup10704_serviceNameLb">Service</dt>
+										<!--// 2019-03-13 수정 -->
 										<dd>
 											<div class="inputBox schType ty1">
 												<!-- 2019-02-20 수정 -->
@@ -338,10 +340,12 @@
 									<dl class="inpItem">
 										<dt id="cup10704_unitRateLb">Unit Rate</dt>
 										<dd>
-											<div class="inputBox">
-												<input type="text" name="cup10704_unitRate" class="inp Mandate" id="cup10704_unitRate">
+											<!-- 2019-03-12 수정 -->
+											<div class="inputBox onlyNumber">
+												<input type="text" name="cup10704_unitRate" class="inp Mandate onlyNumber" id="cup10704_unitRate">
 												<button type="button" class="inpReset"></button>
 											</div>
+											<!--// 2019-03-12 수정 -->
 										</dd>
 									</dl>
 								</li>
@@ -349,10 +353,12 @@
 									<dl class="inpItem">
 										<dt id="cup10704_unitPointLb">Unit Point</dt>
 										<dd>
+											<!-- 2019-03-12 수정 -->
 											<div class="inputBox onlyNumber">
-												<input type="text" name="cup10704_unitPoint" class="inp onlyNumber" id="cup10704_unitPoint">
+												<input type="text" name="cup10704_unitPoint" class="inp onlyNumber etc" id="cup10704_unitPoint">
 												<button type="button" class="inpReset"></button>
 											</div>
+											<!--// 2019-03-12 수정 -->
 										</dd>
 									</dl>
 								</li>
