--- a/subscription_a/cup10501.html
+++ b/subscription_a/cup10501.html
@@ -35,7 +35,7 @@
 	<div class="wrapper">
 		<!-- 헤더영역 -->
 		<header id="headerWrap">
-			<h1><img src="../static/images/common/logo.jpg" alt="OPUS Logistics" /></h1>
+			<h1><img src="../static/images/common/logo.png" alt="OPUS Logistics" /></h1>
 			<div class="menuAll">
 				<button type="button" class="allBtn">
 					<span>Menu</span>
@@ -194,7 +194,9 @@
 									</li>
 									<li>
 										<dl class="inpItem">
-											<dt id="i10501-creationLb">Registration</dt>
+											<!-- 2019-03-13 수정 -->
+											<dt id="i10501-creationLb">Creation</dt>
+											<!--// 2019-03-13 수정 -->
 											<dd>
 												<div class="inputBox Edit_date">
 													<input type="text" name="daterange" class="inp daterange" id="i10501_creation" placeholder="From - To" />
@@ -268,6 +270,9 @@
 									<button type="button" class="btn" id="i10501-reject">Reject</button>
 									<button type="button" class="btn" id="i10501-cancel">Cancel</button>
 									<button type="button" class="btn" id="i10501-addSubscription">Add Subscription</button>
+									<!-- 2019-03-13 추가 -->
+									<button type="button" class="btn" id="i10501-addtenant">Add Tenant</button>
+									<!--// 2019-03-13 추가 -->
 								</div>
 								<!--// 2019-02-21 수정 -->
 							</div>
