--- a/admin_a/cup11001.html
+++ b/admin_a/cup11001.html
@@ -35,7 +35,7 @@
 	<div class="wrapper">
 		<!-- 헤더영역 -->
 		<header id="headerWrap">
-			<h1><img src="../static/images/common/logo.jpg" alt="OPUS Logistics" /></h1>
+			<h1><img src="../static/images/common/logo.png" alt="OPUS Logistics" /></h1>
 			<div class="menuAll">
 				<button type="button" class="allBtn">
 					<span>Menu</span>
