--- a/admin_a/cup11003.html
+++ b/admin_a/cup11003.html
@@ -35,7 +35,7 @@
 	<div class="wrapper">
 		<!-- 헤더영역 -->
 		<header id="headerWrap">
-			<h1><img src="../static/images/common/logo.jpg" alt="OPUS Logistics" /></h1>
+			<h1><img src="../static/images/common/logo.png" alt="OPUS Logistics" /></h1>
 			<div class="menuAll">
 				<button type="button" class="allBtn">
 					<span>Menu</span>
@@ -174,6 +174,21 @@
 											</dd>
 										</dl>
 									</li>
+
+									<!-- 2019-03-13 추가 -->
+									<li>
+										<dl class="inpItem">
+											<dt id="i11003_descriptionLb">Description</dt>
+											<dd>
+												<div class="inputBox">
+													<input type="text" name="i11003_description" class="inp" id="i11003_description" placeholder="Description" maxlength="50">
+													<button type="button" class="inpReset"></button>
+												</div>
+											</dd>
+										</dl>
+									</li>
+									<!--// 2019-03-13 추가 -->
+
 									<li>
 										<dl class="inpItem">
 											<dt id="i11003_creationLb">Creation</dt>
