--- a/pub/templateB.html
+++ b/pub/templateB.html
@@ -272,7 +272,7 @@
 	</div>
 	<!-- //souce code 뷰어 -->
 
-	<h2>input타입 - Percent</h2>
+	<h2>input타입 - Percent [소수점 가능]</h2>
 	<div class="inputBox Percent onlyNumber">
 		<input type="text" name="" class="inp Mandate onlyNumber" id="">
 		<button type="button" class="inpReset"></button>
@@ -289,7 +289,7 @@
 	<!-- //souce code 뷰어 -->
 
 
-	<h2>input타입 - Only Number</h2>
+	<h2>input타입 - Only Number [소수점 가능]</h2>
 	<div class="inputBox onlyNumber">
 		<input type="text" name="" class="inp onlyNumber" id="">
 		<button type="button" class="inpReset"></button>
@@ -299,6 +299,22 @@
 		<pre class="brush: html;">
 			<div class="inputBox onlyNumber">
 				<input type="text" name="" class="inp onlyNumber" id="">
+				<button type="button" class="inpReset"></button>
+			</div>
+		</pre>
+	</div>
+	<!-- //souce code 뷰어 -->
+
+	<h2>input타입 - Only Number [소수점 불가능]</h2>
+	<div class="inputBox onlyNumber">
+		<input type="text" name="" class="inp onlyNumber etc" id="">
+		<button type="button" class="inpReset"></button>
+	</div>
+	<!-- souce code 뷰어 -->
+	<div class="box">
+		<pre class="brush: html;">
+			<div class="inputBox onlyNumber">
+				<input type="text" name="" class="inp onlyNumber etc" id="">
 				<button type="button" class="inpReset"></button>
 			</div>
 		</pre>
