--- a/main/index.html
+++ b/main/index.html
@@ -432,30 +432,35 @@
 	</div>
 </div>
 						</div>
+						-->
 
+						<!--
 
-						<div class="a">
-							<div class="inputBox onlyNumber">
-								<input type="text" name="" class="inp onlyNumber" id="">
-								<button type="button" class="inpReset"></button>
-							</div>
+						 <div class="a">
+							<div class="inputBox Edit_date single">
+	<input type="text" name="" class="inp datesingle" id="">
+</div>
+						 </div>
 
-						</div>
+						 <div class="a">
+							<div class="inputBox Edit_date">
+	<input type="text" name="daterange" class="inp daterange" id="" placeholder="From - To" />	
+</div>
+						 </div>
+
 						 -->
 
 						<div class="a">
-							<div class="inputBox Edit_date">
-								<input type="text" name="daterange" class="inp daterange" id="" placeholder="From - To" />
+							<div class="comboBox">
+								<select class="comboSelect" id="" placeholder="Select a Type">
+									<option value="">Select a Type</option>
+									<option value="T-Shirt">T-Shirt</option>
+									<option value="T-Shirt Woman">T-Shirt Woman</option>
+									<option value="Yellow T-Shirt">Yellow T-Shirt</option>
+									<option value="Zebra T-Shoot">Zebra T-Shoot</option>
+								</select>
 							</div>
 						</div>
-
-						<div class="a">
-							<div class="inputBox Edit_date single">
-								<input type="text" name="" class="inp datesingle" id="">
-							</div>
-						</div>
-
-						<div class="span"></div>
 
 					</div>
 				</div>
@@ -468,19 +473,10 @@
 			}
 
 			.a+.a {}
-
-			.span {
-				margin-top: 20px;
-				background: #fff;
-				color: #333;
-				font-size: 24px;
-			}
 		</style>
 
 		<script type="text/javascript">
-			$(function() {
-				//dd
-			});
+			$(function() {});
 		</script>
 
 	</div>
