--- a/main/index.html
+++ b/main/index.html
@@ -167,12 +167,12 @@
 						<!-- test
 						<div class="a">
 							<dl class="inpItem">
-								<dt id="i10003-companyLb">Company</dt>
+								<dt id="">Company</dt>
 								<dd>
 									<div class="inputBox schType key short">
 										<div class="inner">
 											<input type="text" class="inp autoSch key code Readonly" id="n" readonly="readonly">
-											<input type="text" name="" class="inp autoSch key name" id="i10003-company" placeholder="Type Company Name">
+											<input type="text" name="" class="inp autoSch key name" id="" placeholder="Type Company Name">
 											<button type="button" class="inpReset"></button>
 										</div>
 									</div>
@@ -452,7 +452,7 @@
 
 						<div class="a">
 							<div class="comboBox">
-								<select class="comboSelect" id="" placeholder="Select a Type">
+								<select class="comboSelect" id="ddd" placeholder="Select a Type">
 									<option value="">Select a Type</option>
 									<option value="T-Shirt">T-Shirt</option>
 									<option value="T-Shirt Woman">T-Shirt Woman</option>
@@ -460,6 +460,13 @@
 									<option value="Zebra T-Shoot">Zebra T-Shoot</option>
 								</select>
 							</div>
+						</div>
+
+						<div class="a">
+							<div class="c">값</div>
+							<input type="text" name="" id="" class="a1" />
+							<input type="text" name="" id="" class="a2" />
+							<button type="button" onclick="count();">계산</button>
 						</div>
 
 					</div>
@@ -476,7 +483,29 @@
 		</style>
 
 		<script type="text/javascript">
-			$(function() {});
+			/*
+$(function(){
+	$('body').on('click', function(){
+		v = $('.custom-combobox-input').val();
+		console.log(v);
+	});
+});
+*/
+
+
+			function count() {
+				a = $('.a1').val();
+				b = $('.a2').val();
+				console.log('count');
+				xxx(a, b);
+			}
+
+			function xxx() {
+				console.log('xxx');
+				val = a + b;
+				//console.log('xxx2' + val);
+				$('.c').html(val);
+			}
 		</script>
 
 	</div>
