--- a/htmlList.html
+++ b/htmlList.html
@@ -221,6 +221,15 @@
 							<div class="red"></div>
 						</td>
                     </tr>
+					<tr>
+                        <td>Loading</td>
+                        <td></td>
+                        <td><a target="_blank" href="etc/loading.html">loading.html</a></td>
+                        <td>
+							Loading
+							<div class="red"></div>
+						</td>
+                    </tr>
 
 					<tr class="line">
                         <th>로그인</th>
