--- a/main/index.html
+++ b/main/index.html
@@ -469,6 +469,8 @@
 							<button type="button" onclick="count();">계산</button>
 						</div>
 
+						<div class="dd" tabindex="0">탭 포커스 확인</div>
+
 					</div>
 				</div>
 			</div>
