--- a/etc/loading.html
+++ b/etc/loading.html
@@ -7,7 +7,6 @@
 	<meta name="Author" content="">
 	<meta name="Keywords" content="">
 	<meta name="Description" content="">
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 
 	<style type="text/css">
 		.flexWrap {
@@ -80,11 +79,11 @@
 	</style>
 
 	<script type="text/javascript">
-		$(window).load(function() {
+		window.onload = function() {
 			setTimeout(function() {
 				window.location.href = 'http://in.opuslogis.com/opuslogis/idlogin.usr';
 			}, 1000);
-		});
+		};
 	</script>
 </head>
 
