quill 에디터 단일페이지 반영으로 전환

--- a/site_a/cup10802.html
+++ b/site_a/cup10802.html
@@ -30,6 +30,11 @@
     </script>
 <![endif]-->
 </head>
+<script type="text/javascript">
+	$(function() {
+		Editor();
+	});
+</script>
 
 <body>
 	<section class="layerPopup wide">
