--- a/login/cup10003.html
+++ b/login/cup10003.html
@@ -410,6 +410,7 @@
 									<div class="item" data-value="zm"><i class="zm flag"></i>Zambia</div>
 									<div class="item" data-value="zw"><i class="zw flag"></i>Zimbabwe</div>
 								</div>
+								<button type="button" class="delete" onclick="countryReset(event)">delete</button>
 							</div>
 							<!--// 2019-01-29 클래스 수정 -->
 							<div class="inputBox zipCode">
