--- a/pub/templateB.html
+++ b/pub/templateB.html
@@ -820,6 +820,7 @@ value="" 값과 option text를 비교하여 검색하는 기능 두가지가 동
 				<div class="item" data-value="zm"><i class="zm flag"></i>Zambia</div>
 				<div class="item" data-value="zw"><i class="zw flag"></i>Zimbabwe</div>
 			</div>
+			<button type="button" class="delete" onclick="countryReset(event)">delete</button>
 		</div>
 	</div>
 	<p>Mandate 클래스로 색상 조정</p>
@@ -1073,6 +1074,7 @@ value="" 값과 option text를 비교하여 검색하는 기능 두가지가 동
 		<div class="item" data-value="zm"><i class="zm flag"></i>Zambia</div>
 		<div class="item" data-value="zw"><i class="zw flag"></i>Zimbabwe</div>
 	</div>
+	<button type="button" class="delete" onclick="countryReset(event)">delete</button>
 </div>
 	</textarea>
 	<!-- //souce code 뷰어 -->
