--- a/etc/loading.html
+++ b/etc/loading.html
@@ -37,8 +37,8 @@
 
 		.loading {
 			position: relative;
-			width: 505px;
-			height: 334px;
+			width: 560px;
+			height: 370px;
 			background: #eee;
 			overflow: hidden;
 		}
@@ -92,7 +92,7 @@
 		<div class="flexLayer">
 			<div class="loading">
 				<div class="bgAni"></div>
-				<img src="./loading.png" alt="" class="loadingImg" />
+				<img src="loading.png" alt="" class="loadingImg" />
 			</div>
 		</div>
 	</div>
