--- a/main/layout.html
+++ b/main/layout.html
@@ -174,6 +174,25 @@
 
 	</div>
 
+	<script type="text/javascript">
+		$(function() {
+			$('form').areYouSure();
+		});
+
+		window.onbeforeunload = function(e) {
+			// Your logic to prepare for 'Stay on this Page' goes here 
+
+			return "Please click 'Stay on this Page' and we will give you candy";
+		};
+	</script>
+
+
+	<style type="text/css">
+		.dept {
+			display: block !important;
+		}
+	</style>
+
 
 	<script type="text/javascript">
 		$(function() {
@@ -233,6 +252,11 @@
 				$(this).on('click', function() {
 					var thisDate = $(this).data('name');
 					var thisTitle = $(this).text();
+
+					var inp = '<input type="text" name="" id="" />';
+
+
+
 					console.log(thisDate);
 
 					if ($('.tabList').find('li').hasClass(thisDate) || $('.tabListBox').find('li').hasClass(thisDate)) {
@@ -275,7 +299,7 @@
 						$('.tabList').find('.' + thisDate).children('a').addClass('on');
 						$('.tabListBox').find('.' + thisDate).children('a').addClass('on');
 
-						var dmpDom = '<form action=""><div class="layout" style="background:#fff; height:300px;"><span style="color:#000;">' + thisDate + '</span></div></form>'
+						var dmpDom = '<form action=""><div class="layout" style="background:#fff; height:300px;">' + inp + '<span style="color:#000;">' + thisDate + '</span></div></form>'
 						$('.content').find('form').hide();
 						$(dmpDom).appendTo('.content');
 						TabListSort();
@@ -285,7 +309,6 @@
 
 			// script
 		});
-
 
 		// more tab sort
 		function moreTabSort(a, b, c) {
