--- a/site_a/cup10802.html
+++ b/site_a/cup10802.html
@@ -85,7 +85,7 @@
 									<button type="button" class="btn plus" onclick="fileUploadAdd(this)" id="i10802_attachmentAdd1">Add</button>
 								</div>
 							</li>
-							<li>
+							<li class="on add">
 								<input type="file" name="i10802_attachment2" id="i10802_attachment2" class="inpfile" />
 								<div class="inputBox">
 									<input type="text" name="" class="inp" id="" readonly="readonly">
