4월 이후 진행 페이지 추가

--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -471,7 +471,7 @@
 
 					<tr class="line">
                         <th>계약정보</th>
-                        <td>가입고객목록</td>
+                        <td>가입고객 목록</td>
                         <td></td>
                         <td><a target="_blank" href="subscription_a/cup10501.html">cup10501.html</a></td>
                         <td class="red">
@@ -610,7 +610,7 @@
                         <td class="red">별도 프로세서 [퍼블리싱 없음]</td>
                     </tr>
 					<tr>
-                        <td>스케줄러</td>
+                        <td>스케줄러 목록</td>
                         <td></td>
                         <td><a target="_blank" href="billing_a/cup10610.html">cup10610.html</a></td>
                         <td class="red">
@@ -808,6 +808,75 @@
                         <td>권한 관리</td>
 						<td></td>
                         <td><a target="_blank" href="admin_a/cup11004.html">cup11004.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+
+					<tr class="line">
+                        <th>목록 <br />(4월 이후 반영 목록)</th>
+                        <td>Company 목록</td>
+                        <td></td>
+                        <td><a target="_blank" href="list/cup10205.html">cup10205.html</a></td>
+                        <td class="red">
+						</td>
+                    </tr>
+					<tr>
+                        <td>가입고객 목록</td>
+						<td></td>
+                        <td><a target="_blank" href="list/cup10501.html">cup10501.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>과금정책 목록</td>
+						<td></td>
+                        <td><a target="_blank" href="list/cup10601.html">cup10601.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>정기과금 목록</td>
+						<td></td>
+                        <td><a target="_blank" href="list/cup10603.html">cup10603.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>스케줄러 목록</td>
+						<td></td>
+                        <td><a target="_blank" href="list/cup10610.html">cup10610.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>서비스 사용내역</td>
+						<td></td>
+                        <td><a target="_blank" href="list/cup10611.html">cup10611.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>전송</td>
+						<td></td>
+                        <td><a target="_blank" href="list/cup10615.html">cup10615.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>서비스 목록</td>
+						<td></td>
+                        <td><a target="_blank" href="list/cup10701.html">cup10701.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>가격 목록</td>
+						<td></td>
+                        <td><a target="_blank" href="list/cup10703.html">cup10703.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>서비스그룹 목록</td>
+						<td></td>
+                        <td><a target="_blank" href="list/cup10705.html">cup10705.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>Notice 목록</td>
+						<td></td>
+                        <td><a target="_blank" href="list/cup10801.html">cup10801.html</a></td>
                         <td class="red"></td>
                     </tr>
 
