--- a/htmlList_a.html
+++ b/htmlList_a.html
@@ -812,7 +812,7 @@
                     </tr>
 
 					<tr class="line">
-                        <th>목록 <br />(4월 이후 반영 목록)</th>
+                        <th>4월 이후 반영 목록 <br />(목록)</th>
                         <td>Company 목록</td>
                         <td></td>
                         <td><a target="_blank" href="list/cup10205.html">cup10205.html</a></td>
@@ -859,6 +859,33 @@
                         <td>Notice 목록</td>
 						<td></td>
                         <td><a target="_blank" href="list/cup10801.html">cup10801.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+
+					<tr class="line">
+                        <th>4월 이후 반영 목록 <br />(상세)</th>
+                        <td>서비스 관리</td>
+                        <td></td>
+                        <td><a target="_blank" href="list/cup10702.html">cup10702.html</a></td>
+                        <td class="red">
+						</td>
+                    </tr>
+					<tr>
+                        <td>가격 관리</td>
+						<td></td>
+                        <td><a target="_blank" href="list/cup10704.html">cup10704.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>가입정보 관리</td>
+						<td></td>
+                        <td><a target="_blank" href="list/cup10505.html">cup10505.html</a></td>
+                        <td class="red"></td>
+                    </tr>
+					<tr>
+                        <td>Payment Application</td>
+						<td></td>
+                        <td><a target="_blank" href="list/cup10618.html">cup10618.html</a></td>
                         <td class="red"></td>
                     </tr>
 
